# email-agent-backend

./: .gitignore  README.md  index.py  main.py  pyproject.toml  script.py
config/: config.py
routes/: auth.py  gmail_send_route.py
tools/: gmail_send_tool.py
